--- a/package.json
+++ b/package.json
@@ -7,12 +7,19 @@
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
     "axios": "^0.20.0",
+    "better-scroll": "^2.0.3",
+    "immutable": "^4.0.0-rc.12",
+    "prop-types": "^15.7.2",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
+    "react-redux": "^7.2.1",
     "react-router": "^5.2.0",
     "react-router-config": "^5.1.1",
     "react-router-dom": "^5.2.0",
     "react-scripts": "3.4.3",
+    "redux": "^4.0.5",
+    "redux-immutable": "^4.0.0",
+    "redux-thunk": "^2.3.0",
     "styled-components": "^5.2.0"
   },
   "scripts": {
@@ -36,7 +43,5 @@
       "last 1 safari version"
     ]
   },
-  "devDependencies": {
-    
-  }
+  "devDependencies": {}
 }
