--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "prop-types": "^15.7.2",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
+    "react-lazyload": "^3.0.0",
     "react-redux": "^7.2.1",
     "react-router": "^5.2.0",
     "react-router-config": "^5.1.1",
@@ -21,7 +22,8 @@
     "redux": "^4.0.5",
     "redux-immutable": "^4.0.0",
     "redux-thunk": "^2.3.0",
-    "styled-components": "^5.2.0"
+    "styled-components": "^5.2.0",
+    "swiper": "^6.2.0"
   },
   "scripts": {
     "start": "react-scripts start",
